Bug 328064 - umbrello crashes importing python file containing more than 32 classes
Summary: umbrello crashes importing python file containing more than 32 classes
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.0
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-25 14:34 UTC by Ralf Habacker
Modified: 2013-11-25 15:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments
test case (14.20 KB, text/x-python)
2013-11-25 14:38 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2013-11-25 14:34:52 UTC
Umbrello crashes on importing the appended python file.

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. import appended file
Actual Results:  
umbrello crashes

Expected Results:  
umbrello should not crash, instead it should import the python file
Comment 1 Ralf Habacker 2013-11-25 14:38:24 UTC
Created attachment 83752 [details]
test case
Comment 2 Ralf Habacker 2013-11-25 15:16:23 UTC
Git commit 098d0b47014506cceb96523ad0468d22ce47c7ad by Ralf Habacker.
Committed on 25/11/2013 at 14:42.
Pushed by habacker into branch 'KDE/4.11'.

Fix crash importing python file with more than 32 classes.
FIXED-IN:4.11.4

M  +4    -2    umbrello/codeimport/adaimport.cpp
M  +1    -1    umbrello/codeimport/nativeimportbase.cpp
M  +1    -1    umbrello/codeimport/nativeimportbase.h
M  +6    -3    umbrello/codeimport/pythonimport.cpp

http://commits.kde.org/umbrello/098d0b47014506cceb96523ad0468d22ce47c7ad
Comment 3 Ralf Habacker 2013-11-25 15:21:37 UTC
Git commit af7a48a8e556d7b527549a8a2febaab24e190d93 by Ralf Habacker.
Committed on 25/11/2013 at 14:42.
Pushed by habacker into branch 'KDE/4.12'.

Fix crash importing python file with more than 32 classes.
FIXED-IN:4.11.4
(cherry picked from commit 098d0b47014506cceb96523ad0468d22ce47c7ad)

M  +4    -2    umbrello/codeimport/adaimport.cpp
M  +1    -1    umbrello/codeimport/nativeimportbase.cpp
M  +1    -1    umbrello/codeimport/nativeimportbase.h
M  +6    -3    umbrello/codeimport/pythonimport.cpp

http://commits.kde.org/umbrello/af7a48a8e556d7b527549a8a2febaab24e190d93
Comment 4 Ralf Habacker 2013-11-25 15:30:47 UTC
Git commit 2f52cf17f09fea3e70647b33c54d976658aeee1f by Ralf Habacker.
Committed on 25/11/2013 at 14:42.
Pushed by habacker into branch 'master'.

Fix crash importing python file with more than 32 classes.
FIXED-IN:4.11.4
(cherry picked from commit 098d0b47014506cceb96523ad0468d22ce47c7ad)

M  +4    -2    umbrello/codeimport/adaimport.cpp
M  +1    -1    umbrello/codeimport/nativeimportbase.cpp
M  +1    -1    umbrello/codeimport/nativeimportbase.h
M  +6    -3    umbrello/codeimport/pythonimport.cpp

http://commits.kde.org/umbrello/2f52cf17f09fea3e70647b33c54d976658aeee1f