Fix crash importing python file with more than 32 classes.

BUG:328064
FIXED-IN:4.11.4
(cherry picked from commit 098d0b47014506cceb96523ad0468d22ce47c7ad)